plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/top-mpp/src/jvm18Main/kotlin/transitiveStory/bottomActual/mppBeginning/sourceSetName.kt
package transitiveStory.bottomActual.mppBeginning

actual val <!LINE_MARKER("descr='Has declaration in common module'")!>sourceSetName<!>: String = "jvmMain"